Update bibliography with new entries and revisions
Added new bibliographic entries and removed outdated ones.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,36 +1,44 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@InProceedings{mchugh2018diagrams,
-  author="McHugh, Dean",
-  editor="Chapman and Stapleton and Moktefi and Perez-Kriz and Bellucci",
-  title="Diagrammatic Definitions of Causal Claims",
-  booktitle="Diagrammatic Representation and Inference",
-  year="2018",
-  publisher="Springer",
-  pages="346--354",
-  doi={10.1007/978-3-319-91376-6_32},
+@incollection{mchugh2025reasonsandbecause,
+  title={Reasons and `Because'},
+  author={McHugh, Dean},
+  year={2025},
+  booktitle={Logic in Asia},
+  editor={},
+  publisher={Springer},
+  doi={},
+  pages={},
 }
 
-@inproceedings{mchughcremers2019negationalternatives,
-  title={Negation and Alternatives in Conditional Antecedents},
-  author={McHugh, Dean and Cremers, Alexandre},
-  year={2019},
-  booktitle={Proceedings of the 22nd Amsterdam Colloquium},
-  editor={Schlöder, Julian J. and Dean McHugh and Floris Roelofsen},
-  url={https://archive.illc.uva.nl/AC/AC2019/uploaded_files/inlineitem/McHugh_and_Cremers_Negation_and_alternatives_in_con.pdf},
+@article{chatainmchugh2025thepartsofonly,
+    author = {Chatain, Keny and Dean McHugh},
+    title = {The Parts of Only: Effects of Mereology in the Semantics of Only},
+    journal = {Semantics and Linguistic Theory},
+    volume={35},
+    year = {2025},
+    doi={}
 }
 
-@inproceedings{mchugh2020arecausesevertoostrong,
-    title={Are Causes ever too Strong? {D}ownward monotonicity in the causal domain},
-    booktitle={Logic, Language, and Meaning: Monotonicity in Logic and Language},
-    author={McHugh, Dean},
-    year={2020},
-    editor={Deng, D. and Liu, F. and Liu, M. and Westerståhl, D.},
-    doi={10.1007/978-3-662-62843-0},
-    pages={125--146},
+@incollection{mchugh2025disjunctionsofuniversalmodals,
+  title={Disjunctions of Universal Modals and Conditionals},
+  author={McHugh, Dean},
+  year={2025},
+  booktitle={The Connectives in Logic and Language},
+  editor={Yan, Jialiang and Liu, Mingming and Westerståhl, Dag and Yang, Xiaolu},
+  publisher={Springer},
+  doi={10.1007/978-3-031-86054-6_4},
+  pages={69--92},
+}
+
+@article{mchughklochowicz2024newexperimentalevidence,
+    author = {McHugh, Dean and Klochowicz, Tomasz},
+    title = {New Experimental Evidence Against the Similarity Approach to Conditionals},
+    journal = {Semantics and Linguistic Theory},
+    volume={34},
+    year = {2024},
+    doi={10.3765/e03b4r46}
 }
 
 @article{mchugh2023exhaustificationinbecause, 
@@ -41,6 +49,14 @@
     volume={45},
     number={1},
     doi={10.16995/glossa.7663},
+}
+
+@phdthesis{mchugh2023causationandmodality,
+  title={Causation and Modality: Models and Meanings},
+  author={McHugh, Dean},
+  year={2023},
+  school={University of Amsterdam},
+  url={https://eprints.illc.uva.nl/id/eprint/2243},
 }
 
 @article{mchugh2022aboutnessandmodality,
@@ -62,30 +78,32 @@
       doi={10.48550/arXiv.2109.06707}
 }
 
-@phdthesis{mchugh2023causationandmodality,
-  title={Causation and Modality: Models and Meanings},
-  author={McHugh, Dean},
-  year={2023},
-  school={University of Amsterdam},
-  url={https://eprints.illc.uva.nl/id/eprint/2243},
+@inproceedings{mchugh2020arecausesevertoostrong,
+    title={Are Causes ever too Strong? {D}ownward monotonicity in the causal domain},
+    booktitle={Logic, Language, and Meaning: Monotonicity in Logic and Language},
+    author={McHugh, Dean},
+    year={2020},
+    editor={Deng, D. and Liu, F. and Liu, M. and Westerståhl, D.},
+    doi={10.1007/978-3-662-62843-0},
+    pages={125--146},
 }
 
-@article{mchughklochowicz2024newexperimentalevidence,
-    author = {McHugh, Dean and Klochowicz, Tomasz},
-    title = {New Experimental Evidence Against the Similarity Approach to Conditionals},
-    journal = {Semantics and Linguistic Theory},
-    volume={34},
-    year = {2024},
-    doi={10.3765/e03b4r46}
+@inproceedings{mchughcremers2019negationalternatives,
+  title={Negation and Alternatives in Conditional Antecedents},
+  author={McHugh, Dean and Cremers, Alexandre},
+  year={2019},
+  booktitle={Proceedings of the 22nd Amsterdam Colloquium},
+  editor={Schlöder, Julian J. and Dean McHugh and Floris Roelofsen},
+  url={https://archive.illc.uva.nl/AC/AC2019/uploaded_files/inlineitem/McHugh_and_Cremers_Negation_and_alternatives_in_con.pdf},
 }
 
-@incollection{mchugh2025disjunctionsofuniversalmodals,
-  title={Disjunctions of Universal Modals and Conditionals},
-  author={McHugh, Dean},
-  year={2025},
-  booktitle={The Connectives in Logic and Language},
-  editor={Yan, Jialiang and Liu, Mingming and Westerståhl, Dag and Yang, Xiaolu},
-  publisher={Springer},
-  doi={10.1007/978-3-031-86054-6_4},
-  pages={69--92},
+@InProceedings{mchugh2018diagrams,
+  author="McHugh, Dean",
+  editor="Chapman and Stapleton and Moktefi and Perez-Kriz and Bellucci",
+  title="Diagrammatic Definitions of Causal Claims",
+  booktitle="Diagrammatic Representation and Inference",
+  year="2018",
+  publisher="Springer",
+  pages="346--354",
+  doi={10.1007/978-3-319-91376-6_32},
 }
