Comment out unused fields in papers.bib
Comment out empty fields in bibliography entries.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,10 +6,10 @@
   author={McHugh, Dean},
   year={2025},
   booktitle={Logic in Asia},
-  editor={},
+  # editor={},
   publisher={Springer},
-  doi={},
-  pages={},
+  # doi={},
+  # pages={},
 }
 
 @article{chatainmchugh2025thepartsofonly,
@@ -18,7 +18,7 @@
     journal = {Semantics and Linguistic Theory},
     volume={35},
     year = {2025},
-    doi={}
+    # doi={}
 }
 
 @incollection{mchugh2025disjunctionsofuniversalmodals,
