Mark entries as selected in papers.bib
Added 'selected' field to multiple entries in papers.bib.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
   year={2025},
   booktitle={Logic in Asia},
   publisher={Springer},
-  abstract={abc},
+  selected={true},
 }
 
 @article{chatainmchugh2025thepartsofonly,
@@ -13,6 +13,7 @@
     journal = {Semantics and Linguistic Theory},
     volume={35},
     year = {2025},
+    selected={true},
 }
 
 @incollection{mchugh2025disjunctionsofuniversalmodals,
@@ -24,6 +25,7 @@
   publisher={Springer},
   doi={10.1007/978-3-031-86054-6_4},
   pages={69--92},
+  selected={true}
 }
 
 @article{mchughklochowicz2024newexperimentalevidence,
