Add abstracts to bibliography entries
Added abstracts to several papers in the bibliography.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,8 @@
   year={2025},
   booktitle={Logic in Asia},
   publisher={Springer},
-  selected={true},
+  abstract={This paper proposes an analysis of explanatory reasons, as they appear, for example, in `The reason why the chicken crossed the road was that it wanted to get to the other side' and `The government deregulating banks is a reason why the economy crashed'. I propose that $R$ is a reason why $P$ just in case `$P$ because $R$' is true. I show that this equivalence predicts a wide range of interesting properties of explanatory reasons, including the difference between reasons and causes, the synonymy of `the reason is that $R$' and `the reason is because $R$', the subjective character of reasons, and the fact that reasons can be possessed (as in `I have a reason why I did it') but causes cannot.},
+	selected={true},
 }
 
 @article{chatainmchugh2025thepartsofonly,
@@ -13,6 +14,7 @@
     journal = {Semantics and Linguistic Theory},
     volume={35},
     year = {2025},
+    abstract={Traditionally, <i>only</i> is thought to negate non-weaker alternatives. Kratzer's (1989) still life example, presented more than thirty years ago, challenges this purely logical approach to the semantics of <i>only</i>, appearing to show that the constitution of objects matters to what <i>only</i> negates. This paper reexamines Kratzer's example in the light of later developments in the literature on <i>only</i>. We discuss four types of responses: (i) uphold the traditional view of <i>only</i> supplemented by lexical postulates (van Rooij 2005), (ii) adopt an innocent exclusion semantics for <i>only</i> (Fox 2007), (iii) replace entailment in the meaning of <i>only</i> with `lumping', a variant of entailment defined in terms of situation semantics (von Fintel 1997, Bonomi & Casalegno 1993, Kadmon 2001), (iv) following Kratzer's (1989) suggestion, appeal to a general no-overlap constraint on counting domains. We show that all approaches but (iv) face empirical challenges. Despite some loose ends, we favour (iv) in the comparison, as it faces no clear empirical challenges, though significant work remains to be done.},
     selected={true},
 }
 
@@ -25,6 +27,7 @@
   publisher={Springer},
   doi={10.1007/978-3-031-86054-6_4},
   pages={69--92},
+  abstract={This paper is concerned with disjunctions of universal modals, such as `You have to clean your room or you have to walk the dog', and disjunctions of conditionals, such as `If Alice dances, Charlie will dance, or if Bob dances, Charlie will dance'. We aim to provide a uniform account of their surprising behaviour. Our proposal combines three independently attested components. Firstly, disjunction’s dynamic effect, familiar from presupposition projection: when we evaluate a disjunction $A \vee B$, we typically interpret $B$ assuming the negation of $A$, and optionally, also interpret $A$ assuming the negation of $B$. Secondly, the fact that disjunctions often receive a conjunctive interpretation, familiar from free choice phenomena. Thirdly, that modal bases are restricted to local contexts, what Mandelkern has called ‘bounded modality’.},
   selected={true}
 }
 
@@ -34,6 +37,7 @@
     journal = {Semantics and Linguistic Theory},
     volume={34},
     year = {2024},
+    abstract={},
     doi={10.3765/e03b4r46}
 }
 
@@ -45,6 +49,7 @@
     volume={45},
     number={1},
     doi={10.16995/glossa.7663},
+    abstract={},
 }
 
 @phdthesis{mchugh2023causationandmodality,
@@ -53,6 +58,7 @@
   year={2023},
   school={University of Amsterdam},
   url={https://eprints.illc.uva.nl/id/eprint/2243},
+  abstract={},
 }
 
 @article{mchugh2022aboutnessandmodality,
@@ -62,6 +68,7 @@
     year={2022},
     pages={194--206},
     doi={10.21942/uva.21739718},
+    abstract={},
 }
 
 @misc{izdebski2021pragmatic,
@@ -71,7 +78,8 @@
       eprint={2109.06707},
       archivePrefix={arXiv},
       primaryClass={cs.LG},
-      doi={10.48550/arXiv.2109.06707}
+      doi={10.48550/arXiv.2109.06707},
+      abstract={},
 }
 
 @inproceedings{mchugh2020arecausesevertoostrong,
@@ -82,6 +90,7 @@
     editor={Deng, D. and Liu, F. and Liu, M. and Westerståhl, D.},
     doi={10.1007/978-3-662-62843-0},
     pages={125--146},
+    abstract={},
 }
 
 @inproceedings{mchughcremers2019negationalternatives,
@@ -91,6 +100,7 @@
   booktitle={Proceedings of the 22nd Amsterdam Colloquium},
   editor={Schlöder, Julian J. and Dean McHugh and Floris Roelofsen},
   url={https://archive.illc.uva.nl/AC/AC2019/uploaded_files/inlineitem/McHugh_and_Cremers_Negation_and_alternatives_in_con.pdf},
+  abstract={},
 }
 
 @InProceedings{mchugh2018diagrams,
@@ -102,4 +112,5 @@
   publisher="Springer",
   pages="346--354",
   doi={10.1007/978-3-319-91376-6_32},
+  abstract={},
 }
